--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mytools": "dist/index.js"
   },
   "devDependencies": {
+    "@types/figlet": "^1.5.4",
     "@types/glob": "^7.1.4",
     "@types/lodash": "^4.14.172",
     "ts-node": "^10.1.0",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "commander": "^8.1.0",
+    "figlet": "^1.5.0",
     "glob": "^7.1.7",
     "lodash": "^4.17.21"
   }
