--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "commander": "^8.1.0",
     "figlet": "^1.5.0",
     "glob": "^7.1.7",
