--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "devDependencies": {
     "@types/figlet": "^1.5.4",
     "@types/glob": "^7.1.4",
-    "@types/lodash": "^4.14.172",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
@@ -23,7 +22,6 @@
     "commander": "^8.1.0",
     "figlet": "^1.5.0",
     "fp-ts": "^2.11.1",
-    "glob": "^7.1.7",
-    "lodash": "^4.17.21"
+    "glob": "^7.1.7"
   }
 }
